kubernetes/apps/flux-system/crd-schema-publisher/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crd-schema-publisher
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: infrastructure
spec:
  hostnames:
    - schemas.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: crd-schema-publisher-caddy
          namespace: flux-system
          port: 80
